<resources>
    <string name="app_name">Control de Copias (CC)</string>
    <string name="action_settings">Settings</string>
    <string name="color">Color</string>
    <string name="bn">Blanco \ Negro</string>
    <string name="Titulo">El titulo de la aplicacion es </string>
    <string name="title_activity_rangos_bn">Actualizar Rangos</string>
    <string name="carta">Carta</string>
    <string name="oficio">Oficio</string>
    <string name="doble_carta">Doble Carta</string>
    <string name="rangos">Rangos</string>
    <string name="costo">Costo</string>
    <string name="a">A</string>
    <string name="actualizarBN">Actualizar Rangos Blanco y Negro</string>
    <string name="actualizarColor">Actualizar Rangos a Color</string>
    <string name="tipoHoja">Propiedades del tipo de hoja</string>
    <string name="title_activity_rangos_color">RangosColorActivity</string>
    <string name="hojaSeleccionada">Hoja Seleccionada :</string>
    <string name="propImpresion">Propiedades de impresión:</string>
        <string name="cantidadCopias">Cantidad de copias:</string>
        <string name="detalleVenta">COPIAS A </string>
        <string name="detalleCarta">CARTA </string>
        <string name="detalleOficio">OFICIO </string>
        <string name="detalleDobleCarta">DOBLE CARTA </string>
        <string name="detalleColor">COLOR </string>
        <string name="detalleBN">BLANCO Y NEGRO </string>
    <string name="sync">Sincronizar datos </string>
</resources>
