<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_rangos_bn"
    tools:context="com.example.brisa.copy.RangosBNActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout4">

        <Switch
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/carta"
            android:id="@+id/switchCarta"
            android:tag="1"/>

        <Switch
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/oficio"
            android:id="@+id/switchOficio"
            android:tag="2"/>

        <Switch
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/doble_carta"
            android:id="@+id/switchDobleCarta"
            android:tag="3"/>



        <Button
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Actualizar"
            android:layout_gravity="center"
            android:id="@+id/btnActualizar"
            android:layout_below="@+id/linearLayout4"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:layout_marginRight="31dp"
            android:layout_marginEnd="31dp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:id="@+id/tablaBN">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Tipo de Hoja"
                android:id="@+id/textView3"

                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/rangos"
                android:id="@+id/textView4"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/costo"
                android:id="@+id/textView5"
                android:layout_column="5" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar Cambios"
        android:id="@+id/btnGuardarBN"
        android:layout_below="@+id/tablaBN"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="54dp" />

</RelativeLayout>
