<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout5"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView3"
                android:src="@drawable/imp_negroo"
                android:adjustViewBounds="false"
                android:layout_marginLeft="15dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bn"
                android:id="@+id/swBN"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/content_porcentaje"
            android:visibility="visible"
            android:layout_below="@+id/rgbTipoCarta"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Porcentaje de color:"
                android:id="@+id/textView3"
                android:layout_weight="0.01"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/seekbPorcentaje"
                android:layout_weight="0.13"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="20%"
                android:id="@+id/txtPorcentaje"
                android:layout_weight="0.01"
                android:textSize="20dp" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:id="@+id/rgbTipoCarta"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carta"
                android:id="@+id/rbCarta"
                android:layout_gravity="left"
                android:checked="true"
                android:textSize="20dp"
                android:textAlignment="center"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oficio"
                android:id="@+id/rbOficio"
                android:gravity="center_vertical"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doble_carta"
                android:id="@+id/rbDobleCarta"
                android:textSize="20dp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/propImpresion"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/linearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView"
                android:src="@drawable/imp_colorr"
                android:adjustViewBounds="false"
                android:layout_marginLeft="15dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:id="@+id/swColor"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cantidadCopias"
                android:id="@+id/textView4"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />

            <EditText
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadCopias"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:numeric="integer"
                android:maxLength="5"
                android:textSize="14dp" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="5dp">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ltvDetalleVenta"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout3"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Detalles de Venta:"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:layout_weight="0.50"
            android:layout_gravity="center_vertical"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Total: $"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="-"
            android:id="@+id/lblTotalVenta"
            android:textStyle="bold"
            android:layout_weight="0.50"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar Copia "
            android:id="@+id/btnAddCopias"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorBlanco"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:id="@+id/btnGuardarVenta"
            android:layout_gravity="bottom"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorBlanco" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCELAR"
            android:id="@+id/btnCancelarVenta"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorBlanco" />
    </RelativeLayout>

</RelativeLayout>
