<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_principal" tools:context=".PrincipalActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aceptar"
        android:id="@+id/btnAceptar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="80px">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Titulo"
            android:id="@+id/textView"
            android:textColor="@color/colorGris"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/linearLayout2"
        android:weightSum="1"
        android:id="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/color"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:layout_marginRight="40px"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:id="@+id/swColor"
            android:layout_gravity="right"
            android:layout_weight="0.25" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp">

        <SeekBar
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pocentColor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:max="10"
            android:layout_weight="0.69" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="%"
            android:id="@+id/txtPorcentaje" />

        <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginLeft="40px"
            android:layout_weight="0.07" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/imageView2"
            android:src="@drawable/color"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:layout_marginRight="40px"
            />
        <Switch
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/bn"
            android:id="@+id/swBn" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_weight="1"
            android:layout_marginLeft="40px" />
    </LinearLayout>



</RelativeLayout>
